data/test/method_as_function/negative/7501.js
// This tests requests with empty request body
const axios = require('axios');
axios.post('https://petstore.swagger.io/v2/customers/johndoe/ping', {
    params: {
        priority: 20
    }
});